<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Telephony GPS Mapper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">START collecting data</string>
    <string name="stop">STOP collecting data</string>
    <string name="current_status">Current status:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="network_type">Network Type:</string>
    <string name="signal_strength">Signal Strength:</string>
    <string name="mobile_provider">Mobile Provider:</string>
    <string name="cell_id">Cell ID:</string>
    <string name="lac">Location Area Code:</string>
    <string name="unknown">UNKNOWN</string>
    <string name="location_provider_and_accuracy">Location Provider/Accuracy: </string>
    <string name="reverse_geocoded_location">Reverse geocoded location:</string>
    <string name="locations_recorded">Locations recorded:&#160;</string>
    <string name="zero">0</string>

</resources>