<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		tools:context=".MainActivity">

		<Button
				android:id="@+id/button_start"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/start" />

		<Button
				android:id="@+id/button_stop"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:text="@string/stop" />

		<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginTop="20dp"
				android:gravity="center_horizontal"
				android:orientation="vertical">

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/current_status" />

				<TableLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="20dp"
						android:shrinkColumns="1"
						android:stretchColumns="0">

						<TableRow android:layout_width="fill_parent">

								<TextView
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/signal_strength" />

								<TextView
										android:id="@+id/signal_strength_value"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/unknown" />
						</TableRow>

						<TableRow android:layout_width="fill_parent">

								<TextView
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/network_type" />

								<TextView
										android:id="@+id/network_type_value"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/unknown" />
						</TableRow>

						<TableRow android:layout_width="fill_parent">

								<TextView
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/mobile_provider" />

								<TextView
										android:id="@+id/mobile_provider_value"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/unknown" />
						</TableRow>

						<TableRow android:layout_width="fill_parent">

								<TextView
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/cell_id" />

								<TextView
										android:id="@+id/cell_id_value"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/unknown" />
						</TableRow>

						<TableRow android:layout_width="fill_parent">

								<TextView
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/lac" />

								<TextView
										android:id="@+id/lac_value"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/unknown" />
						</TableRow>

						<TableRow android:layout_width="fill_parent">

								<TextView
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/latitude" />

								<TextView
										android:id="@+id/latitude_value"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/unknown" />
						</TableRow>

						<TableRow android:layout_width="fill_parent">

								<TextView
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/longitude" />

								<TextView
										android:id="@+id/longitude_value"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/unknown" />
						</TableRow>

						<TableRow android:layout_width="fill_parent">

								<TextView
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/altitude" />

								<TextView
										android:id="@+id/altitude_value"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/unknown" />
						</TableRow>
						
						<TableRow android:layout_width="fill_parent">

								<TextView
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/location_provider_and_accuracy" />

								<TextView
										android:id="@+id/location_provider_and_accuracy_value"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/unknown" />
						</TableRow>

						<TableRow
								android:layout_width="fill_parent"
								android:layout_height="fill_parent">

								<TextView
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/reverse_geocoded_location" />

								<TextView
										android:id="@+id/reverse_geocoded_location_value"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/unknown" />
						</TableRow>
				</TableLayout>

				<RelativeLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:gravity="center_horizontal">

						<LinearLayout
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_alignParentBottom="true"
								android:orientation="horizontal">

								<TextView
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/locations_recorded" />

								<TextView
										android:id="@+id/locations_recorded_value"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content"
										android:text="@string/zero" />
						</LinearLayout>
				</RelativeLayout>
		</LinearLayout>

</LinearLayout>